--- a/index.html
+++ b/index.html
@@ -123,4 +123,4 @@ The idea of waking up in a tree made him snicker “I’d probably end up on the
 &quot;We fig&#39;red it&#39;d be best t&#39; check it out ourselves, rather&#39;n take their word for it,&quot; Fumiko adds. &quot;Call it paranoia if y&#39;want, but us mafia types be like that.&quot;</span></div></div></div></div></div>
 
 </div>
-<div class=postamble><div class=postamble__entry>Next Entry</div></div>
+<div class=postamble><div class=postamble__entry><a href="https://bungoustraypups.github.io/privleaprp/part-1.html">Next Entry</a></div></div>
