--- a/part-1.html
+++ b/part-1.html
@@ -71,4 +71,4 @@ Kodo still looked absolutely <em>enamored</em> by Tatsuko&#39;s explanation, abs
 Though at Shuusaku&#39;s question, he flushed a bit and shook his head &quot;I don&#39;t think so, no? Maybe I just picked it up from Tachi?&quot; He shrugged &quot;As far as I remember, I didn&#39;t have any siblings...?&quot;</span> <span class=chatlog__edited-timestamp title="Sunday, February 6, 2022 5:33 PM">(edited)</span></div></div></div></div></div>
 
 </div>
-<div class=postamble><div class=postamble__entry>Exported 12 message(s)</div><div class=postamble__entry>Timezone: UTC-5</div></div>
+<div class=postamble><div class=postamble__entry><a href="https://bungoustraypups.github.io/privleaprp/">Last Entry</a> -- Next Entry</div></div>
