--- a/part-2.html
+++ b/part-2.html
@@ -436,4 +436,4 @@ He shook his head to dismiss the thought and focus on the moment. &quot;Well... 
 Kodo just took to following Tatsuko, because new friend acquired! And he&#39;s very excited about it! Though he was absolutely fighting his urge to get out at least one knife to play with. But he doesn&#39;t want to intimidate anyone, especially Peter. He might pass back out and he doesn&#39;t wanna drag his ass however far.</span></div></div></div></div></div>
 
 </div>
-<div class=postamble><div class=postamble__entry>Exported 61 message(s)</div><div class=postamble__entry>Timezone: UTC-5</div></div>
+<div class=postamble><div class=postamble__entry><a href="https://bungoustraypups.github.io/privleaprp/">Last Entry</a> -- <a href="https://bungoustraypups.github.io/privleaprp/part-1">Next Entry</div></div>
